--- a/ltsh-chat-web/src/main/resources/application.properties
+++ b/ltsh-chat-web/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/ltsh?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&validateConnection=false
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
@@ -41,3 +41,6 @@ spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+tokenTimes = 7200
+randomTimes = 90
