--- a/ltsh-chat-web/src/main/resources/application.properties
+++ b/ltsh-chat-web/src/main/resources/application.properties
@@ -26,7 +26,7 @@ activemq.password=
 activemq.userName=
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/ltsh?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&validateConnection=false
 spring.datasource.username=root
 spring.datasource.password=root
