--- a/ltsh-parent/pom.xml
+++ b/ltsh-parent/pom.xml
@@ -161,6 +161,11 @@
                 <scope>runtime</scope>
                 <version>${mysql.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mariadb.jdbc</groupId>
+                <artifactId>mariadb-java-client</artifactId>
+                <version>2.2.1</version>
+            </dependency>
 
 
             <dependency>
