--- a/ltsh-chat-web-demo/src/main/resources/application.properties
+++ b/ltsh-chat-web-demo/src/main/resources/application.properties
@@ -4,4 +4,4 @@ management.security.roles=SUPERUSER
 pring.devtools.restart.enabled=true
 spring-boot-devtools=true
 
-
+chat.service.url = http://111.230.246.124:8013
