--- a/ltsh-chat-web/pom.xml
+++ b/ltsh-chat-web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ltsh-parent</artifactId>
-        <groupId>org.ltsh</groupId>
+        <groupId>com.ltsh</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../ltsh-parent/pom.xml</relativePath>
     </parent>
