--- a/ltsh-parent/pom.xml
+++ b/ltsh-parent/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.ltsh</groupId>
+    <groupId>com.ltsh</groupId>
     <artifactId>ltsh-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <parent>
