--- a/ltsh-common-client/pom.xml
+++ b/ltsh-common-client/pom.xml
@@ -42,7 +42,7 @@
             <artifactId>jedis</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ltsh</groupId>
+            <groupId>com.ltsh</groupId>
             <artifactId>ltsh-common</artifactId>
         </dependency>
 
