--- a/ltsh-chat-web-demo/pom.xml
+++ b/ltsh-chat-web-demo/pom.xml
@@ -25,7 +25,7 @@
                         <!-- 添加index则不从mainfest中读取classpath，而是从Index.list中读取 -->
                         <!--                         <index>true</index> -->
                         <manifest>
-                            <mainClass>com.ltsh.chat.web.demo.start.StartUp</mainClass>
+                            <mainClass>com.ltsh.chat.web.demo.StartUp</mainClass>
                             <!-- to create a class path to your dependecies you have to fill true
                                 in this field -->
                             <addClasspath>true</addClasspath>
@@ -90,7 +90,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
