--- a/ltsh-chat-web/pom.xml
+++ b/ltsh-chat-web/pom.xml
@@ -58,7 +58,7 @@
                         <!-- 添加index则不从mainfest中读取classpath，而是从Index.list中读取 -->
                         <!--                         <index>true</index> -->
                         <manifest>
-                            <mainClass>com.ltsh.chat.web.start.StartUp</mainClass>
+                            <mainClass>com.ltsh.chat.StartUp</mainClass>
                             <!-- to create a class path to your dependecies you have to fill true
                                 in this field -->
                             <addClasspath>true</addClasspath>
@@ -141,6 +141,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
@@ -153,18 +157,7 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>aopalliance</groupId>
-            <artifactId>aopalliance</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>com.ltsh</groupId>
             <artifactId>ltsh-common-client</artifactId>
