--- a/ltsh-chat-web/src/main/resources/application.properties
+++ b/ltsh-chat-web/src/main/resources/application.properties
@@ -17,14 +17,15 @@ spring.redis.password=
 #connection port
 spring.redis.port=6379
 # pool settings ...
-spring.redis.pool.min-idle=5
-spring.redis.pool.max-idle=20
+redis.pool.min-idle=5
+redis.pool.max-idle=20
 
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=1
 
 
-activemq.brokeUrl=tcp://localhost:61616
+#activemq.brokeUrl=tcp://localhost:61616
+activemq.brokeUrl = failover:(tcp://localhost:61616)?randomize=false
 activemq.acknowledgeMode=1
 activemq.password=
 activemq.userName=
